tutorials/dgkanatsios-exercises/a2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
  namespace: mynamespace
spec:
  containers:
    - name: nginx3
      image: nginx
