tutorials/dgkanatsios-exercises/c1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-test
spec:
  containers:
  - name: cuda-test
    image: "k8s.gcr.io/cuda-vector-add:v0.1"
  nodeSelector:
    accelerator: nvidia-tesla-p100      # a label on the Node object
