tutorials/dgkanatsios-exercises/d-uid101.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  securityContext:
    runAsUser: 101
    capabilities:
      add: [ NET_ADMIN, SYS_TIME ]
  restartPolicy: Never
