tutorials/dgkanatsios-exercises/g1b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: g1b
spec:
  restartPolicy: Never
  containers:
  - image: busybox
    args: [ /bin/sh, -c, "sleep 3600" ]
    name: g1b-one
    volumeMounts:
    - name: etc-foo
      mountPath: /etc/foo
  - image: busybox
    name: g1b-two
    args: [ /bin/sh, -c, "sleep 3600" ]
    volumeMounts:
    - name: etc-foo
      mountPath: /etc/foo
  volumes:
  - name: etc-foo
    emptyDir: {}
