tutorials/dgkanatsios-exercises/g4b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: g4b
spec:
  restartPolicy: Never
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: g4b
    volumeMounts:
    - name: mypvcvol
      mountPath: /etc/foo
  volumes:
  - name: mypvcvol
    persistentVolumeClaim:
      claimName: mypvc
