tutorials/dgkanatsios-exercises/g5.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: g5
  name: g5
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: g5
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
